--- a/frontend/lib/l10n/app_id.arb
+++ b/frontend/lib/l10n/app_id.arb
@@ -229,5 +229,7 @@
   "petOwnersMessageInfo": "Pemilik hewan yang mengirim pesan akan muncul di sini.",
   "selectSpecialties": "Pilih spesialisasi",
   "ratePetDaycare": "Ulas {petDaycareName}",
-  "locationCannotBeEmpty": "Anda Belum Memilih Alamat"
+  "locationCannotBeEmpty": "Anda Belum Memilih Alamat",
+  "vaccinationImageRequired": "Gambar catatan vaksinasi wajib diisi",
+  "nextDueDateValidationError": "Tanggal jatuh tempo berikutnya harus lebih besar dari tanggal pemberian"
 }
