feat: show is a pet is booked in another slots or not during the book slot process

--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -1028,5 +1028,9 @@
             "format": "compact"
             }
         }
+    },
+    "petAlreadyBooked": "Pet already booked",
+    "@petAlreadyBooked": {
+        "description": "Error message shown when a pet is already booked"
     }
 }   
