--- a/frontend/lib/l10n/app_id.arb
+++ b/frontend/lib/l10n/app_id.arb
@@ -81,6 +81,19 @@
   "turnOn": "Aktifkan",
   "petDaycareBoarding": "Penitipan Hewan",
   "kmAway": "{range}km away",
+  "@kmAway": {
+    "description": "Jarak dari pengguna ke lokasi",
+    "placeholders": {
+      "range": {
+        "type": "double",
+        "format": "decimalPattern",
+        "optionalParameters": {
+          "decimalDigits": 1
+        },
+        "example": "1.2"
+      }
+    }
+  },
   "operationalHour": "Jam Operasional",
   "requirements": "Persyaratan",
   "petVaccinationRequired": "Wajib Vaksinasi Hewan",
@@ -238,5 +251,7 @@
   "ratingCannotBeZero": "Penilaian tidak boleh nol",
   "minimumRating": "Bintang Minimum",
   "minStar": "{count} bintang",
-  "petAlreadyBooked": "Satu atau lebih hewan peliharaan sudah memiliki pemesanan aktif"
+  "petAlreadyBooked": "Hewan peliharaan sedang dititipkan di tempat peliharaan",
+  "petDaycareFilter": "Filter Tempat Penitipan Hewan",
+  "vetSpecialtyFilter": "Filter Spesialisasi Dokter Hewan"
 }
